# lazyk

./: .gitignore  Dockerfile  LICENSE  README.md  build.py  build.sh  build_wheels.sh  lazyk.py  publish.sh  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
.github/workflows/: python-publish.yml  python.yml
cpp/: lazyk.cpp  lazyk.hpp  lazyk_pybind.cpp  main.cpp
cpp/include/: lazyk.hpp
cpp/src/: lazyk  lazyk.cpp  lazyk_pybind.cpp  pybind_module.cpp  setup.py
other/: lazyk_py.py
src/: lazyk.cpp  lazyk_pybind.cpp  main.cpp
tests/: layzk_test.py  layzk_tests.py
