[tool.poetry]
name = "Lazy-K"
version = "0.1.1"
description = "A C++ implementation of the Lazy-k algorithm (A* with partial expansion)"
authors = ["Arthur Hemmer <arthurhemmer@hotmail.com>"]
readme = "README.md"
packages = [{include = "src"}]
homepage = "https://github.com/arthurdevnl/lazyk"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.build]
script = "build.py"
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
numpy = "^1.21.2"
cython = "^0.29.24"
pybind11 = "^2.11.0"

[build-system]
requires = [
    "poetry-core>=1.0.0",
    "setuptools>=65.4.1",
    "pybind11",
    "wheel",
    "cython",
]
build-backend = "poetry.core.masonry.api"
