[project]
name = "lazyk"
version = "0.1.5"
description = "A C++ implementation of the Lazy-k algorithm (A* with partial expansion)"
authors = [{name = "Arthur Hemmer", email = "arthurhemmer@hotmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/arthurdevnl/lazyk"

[dependency-groups]
dev = [
    "numpy>=2.2.6",
    "cython>=3.1.2",
    "pybind11>=2.13.6",
    "pytest>=8.4.1",
]

[build-system]
requires = [
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
    "pybind11>=2.13.6",
]
build-backend = "setuptools.build_meta"
